examples/pos/infer/infer_lists.effekt
type List[A] {
  Nil()
  Cons(head: A, tail: List[A])
}

def main() = {
  val empty = Nil();
  // val second = Nil();
  val l = Cons(1, empty);
  Cons(2, l);
  // Cons(true, empty);
  ()
}